# q2-vsearch

./: .copier-answers.yml  .gitignore  LICENSE  Makefile  pyproject.toml
.github/workflows/: ci-dev.yaml
conda-recipe/: meta.yaml
q2_vsearch/: __init__.py  _chimera.py  _cluster_features.py  _cluster_sequences.py  _examples.py  _format.py  _merge_pairs.py  _stats.py  _subsample.py  _transformer.py  _type.py  plugin_setup.py
q2_vsearch/tests/: test_chimera.py  test_cluster_features.py  test_cluster_sequences.py  test_examples.py  test_merge_pairs.py  test_plugin_setup.py  test_stats.py  test_subsample.py
